增强节点信息#1: 一些工具方法